--- a/.golangci.yml
+++ b/.golangci.yml
@@ -78,3 +78,10 @@ linters:
     - paralleltest # [too many false positives] detects missing usage of t.Parallel() method in your Go test
     - tagliatelle # checks the struct tags
     - thelper # detects golang test helpers without t.Helper() call and checks the consistency of test helpers
+
+
+issues:
+  exclude-rules:
+    - path: "_test\\.go"
+      linters:
+        - nlreturn
